Alteraºões finais
